// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalNav renders properly in mobile mode 1`] = `
<nav
  class="navbar navbar-pf-vertical"
>
  <div
    class="navbar-header"
  >
    <button
      class="navbar-toggle collapsed"
      type="button"
    >
      <span
        class="sr-only"
      >
        Toggle navigation
      </span>
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
    </button>
    <span
      class="navbar-brand"
    >
      <span>
        <span
          class="navbar-brand-txt"
        >
          Patternfly React
        </span>
      </span>
    </span>
  </div>
</nav>
`;

exports[`VerticalNav renders properly with a custom className on a nav item 1`] = `
<nav
  class="navbar navbar-pf-vertical"
>
  <div
    class="navbar-header"
  >
    <button
      class="navbar-toggle collapsed"
      type="button"
    >
      <span
        class="sr-only"
      >
        Toggle navigation
      </span>
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
    </button>
    <span
      class="navbar-brand"
    >
      <span>
        <span
          class="navbar-brand-txt"
        >
          Patternfly React
        </span>
      </span>
    </span>
  </div>
</nav>
`;

exports[`VerticalNav renders properly with item children 1`] = `
<nav
  class="navbar navbar-pf-vertical"
>
  <div
    class="navbar-header"
  >
    <button
      class="navbar-toggle collapsed"
      type="button"
    >
      <span
        class="sr-only"
      >
        Toggle navigation
      </span>
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
    </button>
    <span
      class="navbar-brand"
    >
      <span>
        <span
          class="navbar-brand-txt"
        >
          Patternfly React
        </span>
      </span>
    </span>
  </div>
</nav>
`;

exports[`VerticalNav renders properly with item objects 1`] = `
<nav
  class="navbar navbar-pf-vertical"
>
  <div
    class="navbar-header"
  >
    <button
      class="navbar-toggle collapsed"
      type="button"
    >
      <span
        class="sr-only"
      >
        Toggle navigation
      </span>
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
      <span
        class="icon-bar"
      />
    </button>
    <span
      class="navbar-brand"
    >
      <span>
        <img
          alt=""
          class="navbar-brand-icon"
          src="../../../storybook/img/logo-alt.svg"
        />
        <img
          alt=""
          class="navbar-brand-name"
          src="../../../storybook/img/brand-alt.svg"
        />
      </span>
    </span>
  </div>
  <nav
    class="collapse navbar-collapse"
  >
    <ul
      class="navbar-iconic nav navbar-nav navbar-right"
    >
      <li
        class="drawer-pf-trigger"
      >
        <a
          class="nav-item-iconic"
        >
          <span
            aria-hidden="true"
            class="fa fa-bell"
          />
        </a>
      </li>
      <li
        class="dropdown"
      >
        <a
          aria-expanded="false"
          aria-haspopup="true"
          class="nav-item-iconic dropdown-toggle"
          href="#"
          id="help"
          role="button"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-help"
          />
           
          <span
            class="caret"
          />
        </a>
        <ul
          aria-labelledby="help"
          class="dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Help
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              About
            </a>
          </li>
        </ul>
      </li>
      <li
        class="dropdown"
      >
        <a
          aria-expanded="false"
          aria-haspopup="true"
          class="nav-item-iconic dropdown-toggle"
          href="#"
          id="user"
          role="button"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-user"
          />
           Brian Johnson 
          <span
            class="caret"
          />
        </a>
        <ul
          aria-labelledby="user"
          class="dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Preferences
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Logout
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</nav>
`;

exports[`VerticalNav renders properly with masthead PF component 1`] = `
<nav
  class="navbar navbar-pf-vertical"
>
  <div
    class="navbar-header"
  >
    <button
      class="navbar-toggle"
    >
      <span
        class="sr-only"
      >
        Toggle navigation
      </span>
      <span
        aria-hidden="true"
        class="icon-bar"
      />
      <span
        aria-hidden="true"
        class="icon-bar"
      />
      <span
        aria-hidden="true"
        class="icon-bar"
      />
    </button>
    <a
      class="navbar-brand"
      href="#"
      role="button"
    />
  </div>
</nav>
`;
